--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "stremio-addon-sdk": "^1.6.8",
     "axios": "^1.7.7",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "url": "^0.11.5"
   },
   "engines": {
     "node": ">=14"
