--- a/vercel.json
+++ b/vercel.json
@@ -16,5 +16,11 @@
         "Access-Control-Allow-Headers": "Content-Type"
       }
     }
-  ]
+  ],
+  "functions": {
+    "index.js": {
+      "memory": 1024,  // Aumenta la memoria para evitar fallos
+      "maxDuration": 60  // Aumenta el tiempo de espera
+    }
+  }
 }
