--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "stremio-acestream-addon",
+  "version": "1.0.0",
+  "description": "Addon de Stremio para reproducir enlaces AceStream desde una lista M3U",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "stremio-addon-sdk": "^1.3.0",
+    "express": "^4.18.2",
+    "m3u8-parser": "^6.0.0"
+  }
+}{
   "name": "stremio-shickat-addon",
   "version": "1.0.0",
   "description": "Stremio addon para cargar lista M3U con enlaces Acestream",
