--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type"
-      }
-    }
-  ],
-  "functions": {
-    "index.js": {
-      "memory": 1024,  
-      "maxDuration": 60
-    }
-  }
+    { "src": "/(.*)", "dest": "index.js" }
+  ]
 }
