--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
   "name": "stremio-acestream-addon",
   "version": "1.0.0",
-  "description": "Addon de Stremio para reproducir enlaces AceStream desde una lista M3U",
+  "description": "Addon de Stremio para reproducir enlaces AceStream desde lista M3U",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "stremio-addon-sdk": "^1.3.0",
+    "stremio-addon-sdk": "^1.3.2",
     "express": "^4.18.2",
-    "m3u8-parser": "^6.0.0"
-  }
-}{
-  "name": "stremio-shickat-addon",
-  "version": "1.0.0",
-  "description": "Stremio addon para cargar lista M3U con enlaces Acestream",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "stremio-addon-sdk": "^1.6.8",
-    "axios": "^1.7.7",
-    "crypto": "^1.0.1"
+    "axios": "^1.6.7"
   },
   "engines": {
-    "node": ">=14"
-  }
+    "node": ">=18.x"
+  },
+  "author": "TuNombre",
+  "license": "MIT"
 }
