--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "stremio-acestream-addon",
   "version": "1.0.0",
-  "description": "Addon de Stremio para reproducir enlaces AceStream desde lista M3U",
+  "description": "Addon de Stremio que carga enlaces AceStream desde una lista M3U configurable",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "stremio-addon-sdk": "^1.3.2",
-    "express": "^4.18.2",
     "axios": "^1.6.7"
   },
   "engines": {
