--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
   "name": "stremio-acestream-addon",
   "version": "1.0.0",
-  "description": "Addon de Stremio que carga enlaces AceStream desde una lista M3U configurable",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "stremio-addon-sdk": "^1.3.2",
-    "axios": "^1.6.7"
+    "axios": "^1.6.0"
   },
-  "engines": {
-    "node": ">=18.x"
-  },
-  "author": "TuNombre",
-  "license": "MIT"
+  "scripts": {
+    "dev": "vercel dev"
+  }
 }
