--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "axios": "^1.6.0"
   },
-  "scripts": {
-    "dev": "vercel dev"
+  "engines": {
+    "node": ">=18.x"
   }
 }
