--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "stremio-acestream-addon",
+  "name": "stremio-shickat-addon",
   "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "crypto": "^1.0.1"
   },
   "engines": {
     "node": ">=18.x"
