--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "stremio-shickat-addon",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.6.0",
-    "crypto": "^1.0.1"
+    "axios": "^1.6.0"
   },
   "engines": {
     "node": ">=18.x"
