--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/manifest.json", "dest": "/api/manifest.js" },
-    { "src": "/catalog/(.*)", "dest": "/api/addon.js" },
-    { "src": "/meta/(.*)", "dest": "/api/addon.js" },
-    { "src": "/stream/(.*)", "dest": "/api/addon.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
   ]
 }
