--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "stremio-addon-sdk": "^1.6.10",
     "@supabase/supabase-js": "^2.39.0",
     "node-cache": "^5.1.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "iptv-playlist-parser": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
