--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,9 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
-  ]
+    { "src": "/manifest.json", "dest": "/index.js" }
+  ],
+  "hooks": {
+    "build": "npm run build"
+  }
 }
