--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "Heimdallr Channels",
-  "version": "1.2.123",
+  "version": "1.2.126",
   "description": "Addon para cargar canales Acestream o M3U8 desde una lista M3U.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "generate-manifest": "node build-genres.js",
-    "build": "npm run generate-manifest"
+    "vercel-build": "node build-genres.js"
   },
   "dependencies": {
     "stremio-addon-sdk": "^1.6.10",
-    "@supabase/supabase-js": "^2.39.0",
     "node-cache": "^5.1.2",
     "dotenv": "^16.3.1",
-    "iptv-playlist-parser": "^0.11.0"
+    "iptv-playlist-parser": "^0.11.0",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
