--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "Heimdallr Channels",
-  "version": "1.2.126",
+  "version": "1.2.125",
   "description": "Addon para cargar canales Acestream o M3U8 desde una lista M3U.",
   "main": "index.js",
   "scripts": {
+    "prevercel-build": "node build-genres.js",
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "vercel-build": "node build-genres.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "stremio-addon-sdk": "^1.6.10",
     "node-cache": "^5.1.2",
     "dotenv": "^16.3.1",
     "iptv-playlist-parser": "^0.11.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
