--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "Heimdallr Channels",
-  "version": "1.2.125",
+  "version": "1.2.123",
   "description": "Addon para cargar canales Acestream o M3U8 desde una lista M3U.",
   "main": "index.js",
   "scripts": {
-    "prevercel-build": "node build-genres.js",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
     "stremio-addon-sdk": "^1.6.10",
+    "@supabase/supabase-js": "^2.39.0",
     "node-cache": "^5.1.2",
     "dotenv": "^16.3.1",
-    "iptv-playlist-parser": "^0.11.0",
-    "node-fetch": "^2.6.12"
+    "iptv-playlist-parser": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
