--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Heimdallr Channels",
-  "version": "1.2.136", // Sincronizado con index.js
+  "version": "1.2.136",
   "description": "Addon para cargar canales Acestream o M3U8 desde una lista M3U.",
   "main": "index.js",
   "scripts": {
