--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
     "iptv-playlist-parser": "^0.11.0",
-    "body-parser": "^1.20.2" // Añadido
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
