--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+//package.json
 {
   "name": "Heimdallr Channels",
   "version": "1.2.136",
@@ -9,12 +10,12 @@
   },
   "dependencies": {
     "stremio-addon-sdk": "^1.6.10",
-    "@supabase/supabase-js": "^2.39.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
     "iptv-playlist-parser": "^0.11.0",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
