--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,38 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/:configId/:path*",
-      "destination": "/index.js"
+      "src": "/:configId/manifest.json",
+      "dest": "/index.js"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.js"
+      "src": "/:configId/catalog/:type/:id(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/:configId/catalog/:type/:id.json",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/:configId/meta/:type/:id(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/:configId/meta/:type/:id.json",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/:configId/stream/:type/:id(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/:configId/stream/:type/:id.json",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
   ]
 }
