--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Heimdallr Channels",
-  "version": "1.2.162",
+  "version": "1.2.180",
   "description": "Addon para cargar canales Acestream o M3U8 desde una lista M3U.",
   "main": "index.js",
   "scripts": {
@@ -13,8 +13,7 @@
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
     "iptv-playlist-parser": "^0.11.0",
-    "body-parser": "^1.20.2",
-    "uuid": "^9.0.0"
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
