--- a/vercel.json
+++ b/vercel.json
@@ -8,31 +8,27 @@
   ],
   "routes": [
     {
-      "src": "/:configId/manifest.json",
+      "src": "/manifest.json",
       "dest": "/api/index.js"
     },
     {
-      "src": "/:configId/catalog/:type/:id(.*)",
+      "src": "/catalog/:type/:id.json",
       "dest": "/api/index.js"
     },
     {
-      "src": "/:configId/catalog/:type/:id.json",
+      "src": "/meta/:type/:id.json",
       "dest": "/api/index.js"
     },
     {
-      "src": "/:configId/meta/:type/:id(.*)",
+      "src": "/stream/:type/:id.json",
       "dest": "/api/index.js"
     },
     {
-      "src": "/:configId/meta/:type/:id.json",
+      "src": "/configure",
       "dest": "/api/index.js"
     },
     {
-      "src": "/:configId/stream/:type/:id(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/:configId/stream/:type/:id.json",
+      "src": "/generate-url",
       "dest": "/api/index.js"
     },
     {
