--- a/vercel.json
+++ b/vercel.json
@@ -20,11 +20,23 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/([0-9a-f-]+)/catalog/:type/:id.json",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/meta/:type/:id.json",
       "dest": "/api/index.js"
     },
     {
+      "src": "/([0-9a-f-]+)/meta/:type/:id.json",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/stream/:type/:id.json",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/([0-9a-f-]+)/stream/:type/:id.json",
       "dest": "/api/index.js"
     },
     {
@@ -33,6 +45,10 @@
     },
     {
       "src": "/generate-url",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/debug-kv/([0-9a-f-]+)",
       "dest": "/api/index.js"
     },
     {
