--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.3.1",
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
