--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Heimdallr Channels",
-  "version": "1.5.23",
+  "version": "1.5.3",
   "description": "Addon para cargar canales Acestream o M3U8 desde una lista M3U.",
   "main": "api/index.js",
   "scripts": {
@@ -15,7 +15,8 @@
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
     "uuid": "^9.0.1",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^21.3.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
