--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
     "uuid": "^9.0.1",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
