--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "api/cleanup.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "api/cleanup.js", "use": "@vercel/node" },
+    { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
