--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
+    "sharp": "^0.32.5",
     "jimp": "^0.22.10",
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
