--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
     "sharp": "^0.32.5",
-    "p-limit": "^3.1.0"
+    "p-limit": "^3.1.0",
     "jimp": "^0.22.10",
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
