--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "sharp": "^0.32.5",
     "p-limit": "^3.1.0",
+    "canvas": "^2.11.2",
     "jimp": "^0.22.10",
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
