--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
+    "luxon": "^3.4.3",
     "sharp": "^0.32.5",
     "p-limit": "^3.1.0",
     "jimp": "^1.6.0",
