--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-fetch": "^2.6.7",
     "dotenv": "^16.3.1",
     "luxon": "^3.4.3",
+    "@vercel/blob": "^0.25.1",
     "sharp": "^0.32.5",
     "p-limit": "^3.1.0",
     "jimp": "^0.22.10",
