--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
     { "src": "api/cleanup.js", "use": "@vercel/node" },
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
   ],
+  "crons": [
+    { "path": "/api/regenerate-posters", "schedule": "0 6 * * *" }
+  ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
     { "src": "/([0-9a-f-]+)/manifest.json", "dest": "/api/index.js" },
