--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
   ],
   "crons": [
-    { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" }
+    { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
+    { "path": "/api/cleanup-posters", "schedule": "00 4 * * *" }
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
