--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,16 @@
     { "src": "api/cleanup.js", "use": "@vercel/node" },
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
   ],
+  "rewrites": [
+    {
+      "source": "/stream/event/:id.json",
+      "destination": "/src/eventos/stream-events.js"
+    }
+  ],
   "crons": [
     { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
-    { "path": "/api/cleanup-posters", "schedule": "00 4 * * *" }
+    { "path": "/api/cleanup-posters", "schedule": "00 4 * * *" },
+	{ "path": "/cron/scrape-streams", "schedule": "0 5 * * *" }
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
