--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,6 @@
     { "src": "api/cleanup.js", "use": "@vercel/node" },
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
   ],
-  "rewrites": [
-    {
-      "source": "/stream/event/:id.json",
-      "destination": "/src/eventos/stream-events.js"
-    }
-  ],
   "crons": [
     { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
     { "path": "/api/cleanup-posters", "schedule": "00 4 * * *" },
@@ -18,6 +12,7 @@
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
+	{ "src": "/stream/event/:id.json", "dest": "/src/eventos/stream-events.js" }
     { "src": "/([0-9a-f-]+)/manifest.json", "dest": "/api/index.js" },
     { "src": "/([0-9a-f-]+)/catalog/:type/:id.json", "dest": "/api/index.js" },
     { "src": "/catalog/:type/:id.json", "dest": "/api/index.js" },
