--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
-	{ "src": "/stream/event/:id.json", "dest": "/src/eventos/stream-events.js" }
+	{ "src": "/stream/event/:id.json", "dest": "/src/eventos/stream-events.js" },
     { "src": "/([0-9a-f-]+)/manifest.json", "dest": "/api/index.js" },
     { "src": "/([0-9a-f-]+)/catalog/:type/:id.json", "dest": "/api/index.js" },
     { "src": "/catalog/:type/:id.json", "dest": "/api/index.js" },
