--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
 
     { "src": "/cleanup", "dest": "/api/cleanup.js" },
     { "src": "/poster-con-hora", "dest": "/api/poster-con-hora.js" },
-    { "src": "/scrape-streams", "dest": "/src/cron/scrape-streams.js" },
+    { "src": "/scrape-streams", "dest": "/api/scrape-all-streams.js" },
 	  
 
     { "src": "/(.*)", "dest": "/api/index.js" }
