--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
     { "src": "api/cleanup.js", "use": "@vercel/node" },
+	{ "src": "api/scrape-all-streams.js", "use": "@vercel/node" }
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
   ],
   "crons": [
