--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
     { "src": "api/cleanup.js", "use": "@vercel/node" },
-    { "src": "api/poster-con-hora.js", "use": "@vercel/node" }
+    { "src": "api/poster-con-hora.js", "use": "@vercel/node" },
+    { "src": "api/regenerate-posters.js", "use": "@vercel/node" }
   ],
   "crons": [
     { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
@@ -24,6 +25,7 @@
 
     { "src": "/cleanup", "dest": "/api/cleanup.js" },
     { "src": "/poster-con-hora", "dest": "/api/poster-con-hora.js" },
+    { "src": "/regenerate-posters", "dest": "/api/regenerate-posters.js" },
 
     { "src": "/(.*)", "dest": "/api/index.js" }
   ]
