--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,12 @@
     { "src": "api/index.js", "use": "@vercel/node" },
     { "src": "api/cleanup.js", "use": "@vercel/node" },
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" },
-    { "src": "api/CleanupPosters.js", "use": "@vercel/node" },
+    { "src": "api/cleanupposters.js", "use": "@vercel/node" },
     { "src": "api/regenerate-posters.js", "use": "@vercel/node" }
   ],
   "crons": [
     { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
-    { "path": "/api/CleanupPosters", "schedule": "00 4 * * *" }
+    { "path": "/api/cleanupposters", "schedule": "00 4 * * *" }
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
@@ -26,7 +26,7 @@
 
     { "src": "/cleanup", "dest": "/api/cleanup.js" },
     { "src": "/poster-con-hora", "dest": "/api/poster-con-hora.js" },
-    { "src": "/CleanupPosters", "dest": "/api/CleanupPosters" },
+    { "src": "/cleanupposters", "dest": "/api/cleanupposters" },
     { "src": "/regenerate-posters", "dest": "/api/regenerate-posters.js" },
 
     { "src": "/(.*)", "dest": "/api/index.js" }
