--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" },
     { "src": "api/cleanupposters.js", "use": "@vercel/node" },
     { "src": "api/regenerate-posters.js", "use": "@vercel/node" }
+    { "src": "api/resolution.js", "use": "@vercel/node" }
   ],
   "crons": [
     { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
@@ -21,6 +22,7 @@
     { "src": "/([0-9a-f-]+)/stream/:type/:id.json", "dest": "/api/index.js" },
     { "src": "/stream/:type/:id.json", "dest": "/api/index.js" },
     { "src": "/configure", "dest": "/api/index.js" },
+    { "src": "/Resolution", "dest": "/api/resolution.js" },
     { "src": "/generate-url", "dest": "/api/index.js" },
     { "src": "/debug-kv/([0-9a-f-]+)", "dest": "/api/index.js" },
 
