--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     { "src": "api/cleanup.js", "use": "@vercel/node" },
     { "src": "api/poster-con-hora.js", "use": "@vercel/node" },
     { "src": "api/cleanupposters.js", "use": "@vercel/node" },
-    { "src": "api/regenerate-posters.js", "use": "@vercel/node" }
+    { "src": "api/regenerate-posters.js", "use": "@vercel/node" },
     { "src": "api/resolution.js", "use": "@vercel/node" }
   ],
   "crons": [
