--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,7 @@
     { "src": "/meta/:type/:id.json", "dest": "/api/index.js" },
     { "src": "/([0-9a-f-]+)/stream/:type/:id.json", "dest": "/api/index.js" },
     { "src": "/stream/:type/:id.json", "dest": "/api/index.js" },
+    { "src": "/Acceso", "dest": "/api/config-index.js" },
     { "src": "/configure", "dest": "/api/index.js" },
     { "src": "/Resolution", "dest": "/api/resolution.js" },
     { "src": "/upload-image", "dest": "/api/upload-image.js" },
