--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "iptv-playlist-parser": "^0.11.0",
     "body-parser": "^1.20.2",
     "uuid": "^9.0.1",
+    "xml2js": "^0.4.23",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
