--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,12 @@
     { "src": "api/regenerate-posters.js", "use": "@vercel/node" },
     { "src": "api/config-index.js", "use": "@vercel/node" },
     { "src": "api/resolution.js", "use": "@vercel/node" },
+    { "src": "api/epg_precarga.js", "use": "@vercel/node" },
     { "src": "api/upload-image.js", "use": "@vercel/node" }
   ],
   "crons": [
     { "path": "/api/regenerate-posters", "schedule": "00 4 * * *" },
-    { "path": "/api/cleanupposters", "schedule": "00 6 * * *" }
+    { "path": "/api/epg_precarga", "schedule": "00 6 * * *" }
   ],
   "routes": [
     { "src": "/manifest.json", "dest": "/api/index.js" },
@@ -33,6 +34,7 @@
     { "src": "/cleanup", "dest": "/api/cleanup.js" },
     { "src": "/poster-con-hora", "dest": "/api/poster-con-hora.js" },
     { "src": "/cleanupposters", "dest": "/api/cleanupposters.js" },
+    { "src": "/epg_precarga", "dest": "/api/epg_precarga.js" },
     { "src": "/regenerate-posters", "dest": "/api/regenerate-posters.js" },
 
     { "src": "/(.*)", "dest": "/api/index.js" }
