--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "uuid": "^9.0.1",
     "xml2js": "^0.6.2",
+    "fast-xml-parser": "^5.3.0",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
