--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "uuid": "^9.0.1",
     "xml2js": "^0.6.2",
     "fast-xml-parser": "^5.3.0",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "@iptv/playlist": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
